// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichTextEditor can be keyboard aware 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    editorItemsChanged={[Function]}
    getFile={[Function]}
    navigator={
      Object {
        "dismiss": [Function],
        "dismissAllModals": [Function],
        "isModal": false,
        "pop": [Function],
        "show": [Function],
        "traitCollection": [Function],
      }
    }
    onBlur={[Function]}
    onFocus={[Function]}
    onLoad={[Function]}
    scrollEnabled={true}
  />
  <KeyboardSpacer
    onToggle={[Function]}
    topSpacing={-209}
  />
</View>
`;

exports[`RichTextEditor does height stuff when color picker shown 1`] = `
"
        var scrollTop = $(window).scrollTop();
        $(window).scrollTop(scrollTop+46);
      "
`;

exports[`RichTextEditor hides toolbar when editor blurs 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    editorItemsChanged={[Function]}
    getFile={[Function]}
    navigator={
      Object {
        "dismiss": [Function],
        "dismissAllModals": [Function],
        "isModal": false,
        "pop": [Function],
        "show": [Function],
        "traitCollection": [Function],
      }
    }
    onBlur={[Function]}
    onFocus={[Function]}
    onLoad={[Function]}
    scrollEnabled={true}
  />
  <KeyboardSpacer
    onToggle={[Function]}
    topSpacing={-209}
  />
</View>
`;

exports[`RichTextEditor hides toolbar when showToolbar is false 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    editorItemsChanged={[Function]}
    getFile={[Function]}
    navigator={
      Object {
        "dismiss": [Function],
        "dismissAllModals": [Function],
        "isModal": false,
        "pop": [Function],
        "show": [Function],
        "traitCollection": [Function],
      }
    }
    onBlur={[Function]}
    onFocus={[Function]}
    onLoad={[Function]}
    scrollEnabled={true}
  />
  <KeyboardSpacer
    onToggle={[Function]}
    topSpacing={0}
  />
</View>
`;

exports[`RichTextEditor renders 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    editorItemsChanged={[Function]}
    getFile={[Function]}
    navigator={
      Object {
        "dismiss": [Function],
        "dismissAllModals": [Function],
        "isModal": false,
        "pop": [Function],
        "show": [Function],
        "traitCollection": [Function],
      }
    }
    onBlur={[Function]}
    onFocus={[Function]}
    onLoad={[Function]}
    scrollEnabled={true}
  />
  <KeyboardSpacer
    onToggle={[Function]}
    topSpacing={0}
  />
</View>
`;

exports[`RichTextEditor renders toolbar when editor focused 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    editorItemsChanged={[Function]}
    getFile={[Function]}
    navigator={
      Object {
        "dismiss": [Function],
        "dismissAllModals": [Function],
        "isModal": false,
        "pop": [Function],
        "show": [Function],
        "traitCollection": [Function],
      }
    }
    onBlur={[Function]}
    onFocus={[Function]}
    onLoad={[Function]}
    scrollEnabled={true}
  />
  <RichTextToolbar
    active={Array []}
    insertImage={null}
    insertLink={[Function]}
    onColorPickerShown={[Function]}
    redo={[Function]}
    setBold={[Function]}
    setItalic={[Function]}
    setOrderedList={[Function]}
    setTextColor={[Function]}
    setUnorderedList={[Function]}
    undo={[Function]}
  />
  <KeyboardSpacer
    onToggle={[Function]}
    topSpacing={-209}
  />
</View>
`;

exports[`RichTextEditor should update active editor items in toolbar 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    editorItemsChanged={[Function]}
    getFile={[Function]}
    navigator={
      Object {
        "dismiss": [Function],
        "dismissAllModals": [Function],
        "isModal": false,
        "pop": [Function],
        "show": [Function],
        "traitCollection": [Function],
      }
    }
    onBlur={[Function]}
    onFocus={[Function]}
    onLoad={[Function]}
    scrollEnabled={true}
  />
  <RichTextToolbar
    active={Array []}
    insertImage={null}
    insertLink={[Function]}
    onColorPickerShown={[Function]}
    redo={[Function]}
    setBold={[Function]}
    setItalic={[Function]}
    setOrderedList={[Function]}
    setTextColor={[Function]}
    setUnorderedList={[Function]}
    undo={[Function]}
  />
  <KeyboardSpacer
    onToggle={[Function]}
    topSpacing={-209}
  />
</View>
`;

exports[`RichTextEditor should update active editor items in toolbar 2`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    editorItemsChanged={[Function]}
    getFile={[Function]}
    navigator={
      Object {
        "dismiss": [Function],
        "dismissAllModals": [Function],
        "isModal": false,
        "pop": [Function],
        "show": [Function],
        "traitCollection": [Function],
      }
    }
    onBlur={[Function]}
    onFocus={[Function]}
    onLoad={[Function]}
    scrollEnabled={true}
  />
  <RichTextToolbar
    active={Array []}
    insertImage={null}
    insertLink={[Function]}
    onColorPickerShown={[Function]}
    redo={[Function]}
    setBold={[Function]}
    setItalic={[Function]}
    setOrderedList={[Function]}
    setTextColor={[Function]}
    setUnorderedList={[Function]}
    undo={[Function]}
  />
  <KeyboardSpacer
    onToggle={[Function]}
    topSpacing={-209}
  />
</View>
`;
